--- a/manpromanpro/build.gradle
+++ b/manpromanpro/build.gradle
@@ -28,7 +28,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
-	implementation 'com.github.javafaker:javafaker:1.0.2'
+	implementation ('com.github.javafaker:javafaker:1.0.2') {
+  		exclude group: 'org.yaml', module: 'snakeyaml'
+ 	}
 }
 
 tasks.named('test') {
