--- a/manpromanpro-frontend/package.json
+++ b/manpromanpro-frontend/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "data-fns": "^1.1.0",
+    "date-fns": "^4.1.0",
     "flowbite": "^2.5.2",
     "pinia": "^2.2.6",
     "simple-datatables": "^9.2.1",
