--- a/manpromanpro/build.gradle
+++ b/manpromanpro/build.gradle
@@ -40,6 +40,7 @@ dependencies {
 	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
 	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'
 	implementation 'jakarta.xml.bind:jakarta.xml.bind-api:4.0.2'
+	implementation 'io.github.cdimascio:dotenv-java:3.0.0'
 }
 
 tasks.named('test') {
